Support for kafka within xacml tutorial
Issue-ID: POLICY-4202
Change-Id: I7bb47dce25d7613221a13f8437030f02a978770d
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>